Publishing to master (publish.sh)

--- a/css/style.css
+++ b/css/style.css
@@ -1297,12 +1297,31 @@ textarea {
     color: #fff;
     top: 5px;
 }
-@media screen and (max-width:767px) {
+@media screen and (max-width:300px) {
 	#return-to-top {
 		display:none!important
 	}
 }
-
+@media screen and (max-width:767px) {
+	#return-to-top {
+        bottom: 15px;
+        right: 15px;
+        width: 31px;
+        height: 31px;
+        -webkit-border-radius: 35px;
+        -moz-border-radius: 35px;
+        border-radius: 35px;
+	}
+    #return-to-top i {
+        left: 9px;
+        top: 5px;
+        font-size: 16px;
+    }
+    #return-to-top:hover i {
+        color: #fff;
+        top: 1px;
+    }
+}
 
 .archive {
     margin: 2em 0;
